# GunnHaXI-boof

./: .gitignore  CMakeLists.txt  Containerfile  README.md  boof  build.sh  build_debug.sh  build_release.sh  init.sh
src/: constants.h  download.cpp  download.h  fzf_search.cpp  fzf_search.h  install.cpp  install.h  main.cpp  meta.cpp  meta.h  update.cpp  update.h  upgrade.cpp  upgrade.h  use.cpp  use.h
